--- a/pages/borehole/borehole.css
+++ b/pages/borehole/borehole.css
@@ -22,7 +22,9 @@
     font-family: dinpro;
     src: url(../../fonts/DINPro.woff2);
 }
-
+.wrapper, .content, .what_is_that__textblock, .advantage__card, .main__header, .hero__image > *{
+    will-change: transform;
+}
 body {
     background-color: #FFFFFF;
     color: var(--text-color1);
@@ -121,7 +123,7 @@ a {
     font-size: 1.4rem;
     font-weight: 400;
     word-wrap: break-word;
-    margin-bottom: 4vh;
+    margin: 1.5rem 0;
 }
 
 .main__buttons {
@@ -387,6 +389,7 @@ a {
     border-radius: 1.5rem;
     row-gap: 2rem;
     overflow: hidden;
+    transition: all 1s ease-in-out;
 }
 
 .question__button_wrapper {
@@ -403,21 +406,43 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: all 0.3s ease-in-out;
 }
 
-.question__button_wrapper .active {
+.button__active {
     background-color: var(--text-color1);
-
+    transform: rotate(180deg);
 }
 
 .question__active {
     height: max-content;
+    transition: all 0.3s ease-in-out;
 }
+
+.question h3 {
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.question__active h3 {
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.button__active svg g path{
+    fill:white;
+}
+
+
 .map {
     width: 100%;
-    height: calc(var(--index)*25);
+    height: calc(var(--index) * 25);
     position: relative;
 }
+
+
 
 .map__top_block {
     width: 100%;
@@ -438,7 +463,7 @@ footer {
     row-gap: 2rem;
 }
 
-.footer__adress {
+.footer__address {
     margin-top: 1rem;
     width: 9rem;
 }
@@ -479,27 +504,8 @@ footer {
     justify-content: center;
 }
 
-@media (max-width: 1024px) {
-    .logo {
-        flex-basis: 0%;
-    }
-
-    .navbar__list {
-        width: calc(var(--index) * 25);
-        flex-basis: 50%;
-        column-gap: 1em;
-        display: flex;
-        justify-content: space-between;
-        list-style: none;
-    }
-
-    .navbar__item {
-        font-size: calc(var(--index));
-        font-family: raleway-c;
-        font-weight: 400;
-        word-wrap: break-word
-    }
-
+.mobile__bottom_navbar{
+    display: none;
 }
 
 @media (max-width: 768px) {
@@ -525,204 +531,160 @@ footer {
         word-wrap: break-word
     }
 
-    .hero {
-    }
-
     .lang {
         display: none;
     }
 
+
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    h2{
+        font-size: 1.5rem;
+    }
+    h3{
+        font-size: 1rem;
+    }
+
     .burger__menu {
+        border-radius: 8px;
+        background-color: #F6F5F5;
+        padding: 0.625rem;
         display: block;
     }
 
     .hero .container {
         flex-direction: column;
-        padding: 22vw 2vh;
+        row-gap: 2rem;
+        padding: 8rem 2rem;
         margin-left: 0;
     }
 
     .hero__image {
         position: static;
-
+        width: 24rem;
     }
 
-    h1 {
-        width: calc(var(--index) * 25);
-        color: var(--text-color1);
-        font-size: calc(var(--index) * 2);
-        font-weight: bold;
-        word-wrap: break-word;
+    .main__subtitle {
+        width: 20rem;
+        font-size: 1rem;
     }
 
+    .main__buttons{
+        margin-top: 4rem;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 1rem;
+    }
 
     .main__btn {
-        width: calc(var(--index) * 10);
-        height: calc(var(--index) * 4);
-
-        font-size: calc(var(--index) * 1);
-
+        width: 80%;
     }
 
-    .main__btn:first-child {
-        background-color: var(--button-color);
-        color: var(--background-color);
-    }
+    .what_is_that{
+        padding: 5rem;
 
-    .what_is_that {
+    }
+    .what_is_that__wrapper{
         flex-direction: column-reverse;
-        row-gap: 2em;
+        row-gap: 2rem;
     }
 
-    .what_is_that__image {
-        width: calc(var(--index) * 35);
+    .what_is_that__images{
+        align-items: center;
+        row-gap: 1rem;
     }
 
-    .what_is_that__textblock {
-        width: calc(var(--index) * 35);
+    .what_is_that__image1{
+        width: 25rem;
     }
-
-    .footer__info {
-        flex-direction: column;
-        row-gap: 2em;
+    .what_is_that__image2{
+        width: 25rem;
     }
-
-    .advantages__pages {
+    .what_is_that__textblock{
+        padding: 2rem;
+    }
+    .advantages{
+        padding: 10rem 2rem;
+    }
+    .advantages__pages{
         display: none;
     }
-
-    .advantages__pages__mobile {
+    .advantages__pages__mobile{
         display: block;
     }
-
-    .advantage__list {
+    .advantage__list{
         flex-direction: row;
-        column-gap: 1em;
+        column-gap: 1rem;
     }
-
-    .advantage__card {
-        width: calc(var(--index) * 40);
+    .advantage__card{
         flex-direction: column-reverse;
-        row-gap: 2em;
+        row-gap: 1rem;
     }
-
-    .advantage__text {
+    .advantage__text{
+    }
+    .advantage__text .subtitle{
         width: 100%;
-
     }
-
-    .advantage__text .head {
-        width: calc(var(--index) * 17);
-        font-size: calc(var(--index) * 1.5);
+    .htw{
+        padding: 5rem 2rem;
+        row-gap: 2rem;
     }
-
-    .advantage__text .title {
-        font-size: calc(var(--index) * 1.4);
-    }
-
-    .advantage__text .subtitle {
-        width: 100%;
-        font-size: calc(var(--index) * 1.4);
-    }
-
-    .htw__content {
+    .htw__content{
         flex-direction: column-reverse;
-        row-gap: 2em;
         padding: 0;
     }
-
-    .htw__text {
-        width: 90%;
-    }
-
-    .htw__progress_bar {
+    .htw__progress_bar{
         display: none;
     }
-
-    .htw__image {
-        width: calc(var(--index) * 30);
-        height: calc(var(--index) * 30);
+    .htw__image{
+        width: 20rem;
     }
-
-    .news {
-        padding: 5vh 10vw;
-    }
-
-    .news__title {
-        font-size: calc(var(--index) * 2);
-        margin-bottom: 1em;
-    }
-
-    .news__link {
-        display: none;
-    }
-
-    .news__link__mobile {
-        display: block;
-    }
-
-    .news__container {
-        column-gap: 2em;
-    }
-
-    .new__image {
-        width: calc(var(--index) * 25);
-        height: calc(var(--index) * 20);
-    }
-
-    .new__subscription {
-        width: calc(var(--index) * 25);
-        display: flex;
-    }
-
-    .new__titles {
-        width: 100%;
-        flex-basis: 100%;
-    }
-
-    .new__title {
-        font-size: calc(var(--index) * 1.7);
-    }
-
-    .new__subtitle {
-        width: 100%;
-        font-size: calc(var(--index) * 1.2);
-    }
-
-    .questions {
-        padding: 10vh 5vw;
-    }
-
-    .questions__title {
-        font-size: calc(var(--index) * 2);
-    }
-
-    .question {
-        height: 3rem;
-    }
-
-    .question__active {
-        height: calc(var(--index) * 15);
-    }
-
-    .question__p {
-        font-size: calc(var(--index) * 1.5);
-    }
-
-    .question__text {
-        font-size: calc(var(--index) * 1.3);
-        line-height: 26px;
-    }
-
-    .application_form {
+    .htw__text{
         width: 100%;
     }
-
-    #name {
-        width: 100%;
+    .questions{
+        padding: 5rem 2rem;
     }
-
-    .interested__in {
+    .question__button{
+        padding: 0.25rem;
+    }
+    iframe{
+        padding-bottom: 10rem;
+    }
+    footer{
+        padding: 0;
+        padding-left: 1rem;
+    }
+    .footer__info{
         flex-direction: column;
+        row-gap: 2rem;
+    }
+    .mobile__bottom_navbar{
+        width: 100%;
+        height: 4rem;
+        background-color: var(--background-color);
+        display: flex;
+        justify-content: space-between;
+        padding: 0 2rem;
+        z-index: 10000;
+        position: fixed;
+        bottom: 0;
+        border-top: 1px solid #858585;
+    }
+    .mobile__bottom__button{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        row-gap: 0.5rem;
+        border: none;
+        background-color: var(--background-color);
+    }
+    .mobile__calculate_button{
+        position: absolute;
+        left: 40%;
+        bottom: 20%;
     }
 }
