--- a/pages/detailes/detailes.css
+++ b/pages/detailes/detailes.css
@@ -23,10 +23,22 @@
 }
 
 body {
-    background-color:  #F3F7F9;
+    background-color: #F3F7F9;
     color: var(--text-color1);
     font-family: raleway-c;
     overflow-x: hidden;
+}
+
+h1 {
+    font-size: 3.5rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1rem;
 }
 
 a {
@@ -36,7 +48,8 @@ a {
 
 .navbar {
     width: 100%;
-    height: 72px;
+    height: 4.5rem;
+    padding:0 7rem ;
 }
 
 .navbar__menu {
@@ -45,17 +58,16 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px calc(var(--index)*5);
+    padding: 1.25rem 2.5rem;
 }
 
 .logo {
     flex-basis: 50%;
     font-family: dinpro;
-    font-size: 24px;
+    font-size: 1.563rem;
+    font-weight: bold;
     color: var(--button-color);
-    font-weight: 700;
     text-transform: uppercase;
-    word-wrap: break-word
 }
 
 .burger__menu {
@@ -63,7 +75,7 @@ a {
 }
 
 .navbar__list {
-    width: calc(var(--index)*20);
+    width: 30rem;
     display: flex;
     justify-content: space-between;
     list-style: none;
@@ -71,156 +83,53 @@ a {
 
 .navbar__item {
     color: var(--text-color1);
-    font-size: calc(var(--index)*0.75);
-    font-family: raleway-c;
+    font-size: 1rem;
     font-weight: 400;
     word-wrap: break-word
 }
 
-.hero{
-    padding: 10vh 10vw;
+.hero {
+    padding: 7rem;
     display: flex;
     flex-direction: column;
-    row-gap: 2em;
+    row-gap: 2rem;
 }
-.hero__back_btn{
+
+.hero__back_btn {
     display: flex;
     align-items: center;
-    column-gap: 1em;
+    column-gap: 1rem;
     color: #118DF0;
-    font-size: calc(var(--index)*0.8);
+    font-size: 1.2rem;
 }
 
-h1{
-    font-size: calc(var(--index)*2);
-}
 
-.detailes__wrapper{
+.detailes__wrapper {
     display: flex;
     flex-direction: column;
-    width:100%;
-    row-gap: 2em;
+    width: 100%;
+    row-gap: 2rem;
 }
-.image{
+
+.image {
     background-image: url(../../img/detailes.png);
     width: 100%;
-    height: calc(var(--index)*20);
+    height: 30rem;
     background-size: cover;
     border-radius: 24px;
 
 }
-.detailes__wrapper p{
-    width: calc(var(--index)*25);
-}
-.calculator{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: calc(var(--index)*10);
-    background-color: #FFFFFF;
-    border-radius: 24px;
-    padding: 2vw 2vh;
-}
-.inputs{
-    display: flex;
-    flex-direction: column;
-    row-gap: 2em;
-}
-.inputs input{
-    width: calc(var(--index)*15);
-    padding: 1vw;
-    color: var(--text-color1);
-    font-family: raleway-c;
-    font-size: calc(var(--index));
-    background-color: #F9FAFC;
-    border-width: 0;
-    border-radius: 24px;
-}
 
-.price_value{
-    font-weight: bold;
-    font-size: calc(var(--index)*2);
-    margin-bottom: 0.5em;
-}
-.price__btn{
-    width: calc(var(--index)*6);
-    height: 7vh;
-    font-family: raleway-c;
-    color: var(--background-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--button-color);
-    border-radius: 8px;
-    border: 0px solid var(--text-color1);
-    padding: 5px 5px;
-    font-size: calc(var(--index)*0.6);
-}
-
-.neseccary{
-    display: flex;
-    flex-direction: column;
-    padding: 10vh 10vw;
-    row-gap: 1em;
-}
-.neseccary__subtitle{
-    color:var(--text-color2)
-}
-
-.neseccary__title{
-    font-size: calc(var(--index)*2);
-    font-weight: bold;
-}
-.neseccary__blocks_wrapper{
-    display: flex;
-    column-gap: 2em;
-    padding: 2vw 2vh;
-}
-
-.slider{
-    width: calc(var(--index)*20);
-    padding: 2vw;
-    border-radius: 24px;
-    background-color: #FFFFFF;
-    display: flex;
-}
-
-.swiper{
-    display: flex;
-    flex-direction: column;
-    width: calc(var(--index)*15);
-    height: calc(var(--index)*15);
-}
-
-.swiper-slide{
-    border-radius: 24px;
-}
-
-.swiper-photo{
-    width: calc(var(--index)*15);
-    height:calc(var(--index)*15);
-    border-radius: 24px;
-    background-size: cover;
-}
-
-.first_slide{
-    background-image: url(../../img/swiper-images/tubes.png);
-}
-.second_slide{
-    background-image: url(../../img/swiper-images/holders.png);
-}
-.definitions{
-    width: calc(var(--index)*30);
-    background-color: #FFFFFF;
-    border-radius: 24px;
+.detailes__wrapper p {
+    width: 35.4rem;
 }
 
 .news {
     width: 100%;
-    padding: 20vh 10vw;
+    padding: 7rem;
     display: flex;
     flex-direction: column;
-    row-gap: 2em;
+    row-gap: 2rem;
 }
 
 .news__head {
@@ -228,24 +137,17 @@ h1{
     justify-content: space-between;
 }
 
-.news__title {
-    color: #333333;
-    font-size: calc(var(--index)*1.5);
-    font-weight: 500;
-    font-weight: bold;
-    word-wrap: break-word
-}
-
-.news__subtitle {
-    color: var(--text-color2);
-    font-size: 18px;
-    font-weight: 500;
-    word-wrap: break-word
+.new{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 0.5rem;
 }
 
 .new__image {
-    width: calc(var(--index)*15);
-    height: calc(var(--index)*10);
+    width: 20rem;
+    height: 13rem;
     background-image: url(../../img/new1.png);
     border-radius: 24px;
 }
@@ -255,96 +157,83 @@ h1{
     display: flex;
     justify-content: space-between;
 }
-.news__link__mobile{
-    display: none;
-}
 
-.news__link .new {
-    display: flex;
-    flex-direction: column;
-}
-
-.news__link__mobile{
-    display: none;
-}
 
 .new__subscription {
-    width: calc(var(--index)*15);
+    width: 20rem;
     display: flex;
+}
+
+.new__titles{
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
 }
 
 .new__date {
     color: var(--text-color2);
-    font-size: 14px;
+    font-size: 0.8rem;
     font-weight: 400;
     word-wrap: break-word
 }
 
-.new__title {
-    color: var(--text-color1);
-    font-size: calc(var(--index)*0.7);
-    font-weight: 600;
-    word-wrap: break-word
-}
+
 
 .new__subtitle {
     display: flex;
-    width: calc(var(--index)*12);
     color: var(--text-color2);
-    font-size: calc(var(--index)*0.6);
+    font-size: 0.8rem;
     font-weight: 400;
     word-wrap: break-word
 }
 
-.new__button {
-    width: calc(var(--index)*2);
-    height: calc(var(--index)*2);
+.new__button{
+    width: 3rem;
+    height: 3rem;
+    padding: 0.75rem;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
     border-width: 0;
+    transition: all 0.25s ease-in;
 }
 
-.new__button img{
-    width: calc(var(--index)*1.3);
+.new__button:hover svg path{
+    fill: #FFFFFF;
+}
+
+.new__button:hover{
+    background-color: #333333;
 }
 
 .map {
     width: 100%;
-    height: calc(var(--index)*25);
     position: relative;
 }
 
+
+
 .map__top_block {
     width: 100%;
-    height: 100px;
+    height: 6.25rem;
     background: linear-gradient(to top, transparent, rgba(255, 255, 255));
-    position: absolute;
-    z-index: 10;
-}
-
-.map__bottom_block {
-    top: calc(var(--index)*14);
-    width: 100%;
-    height: 100px;
-    background: linear-gradient(to bottom, transparent, rgba(255, 255, 255));
     position: absolute;
     z-index: 10;
 }
 
 footer {
     width: 100%;
-    height: calc(var(--index)*15);
-    background-color: var(--background-color);
+    background-color:#F3F7F9;
     display: flex;
     flex-direction: column;
-    padding: 10vh 10vw;
-    row-gap: 2em;
+    padding: 4rem 7rem 1.5rem 7rem;
+    row-gap: 2rem;
 }
 
 .footer__address {
-    width: calc(var(--index)*10);
+    margin-top: 1rem;
+    width: 9rem;
 }
 
 .footer__info {
@@ -353,8 +242,11 @@ footer {
 }
 
 .footer__list ul {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
     list-style: none;
-    padding-top: 0.5em;
+    padding-top: 2rem;
 }
 
 .footer__logo img {
@@ -365,9 +257,7 @@ footer {
     font-weight: bold;
 }
 
-.map__frame {
-    height: calc(var(--index)*20);
-}
+
 
 .footer__link {
     display: flex;
@@ -380,33 +270,15 @@ footer {
     justify-content: center;
 }
 
-@media (max-width:1024px) {
-    .logo {
-        flex-basis: 0%;
-    }
-
-    .navbar__list {
-        width: calc(var(--index)*25);
-        flex-basis: 50%;
-        column-gap: 1em;
-        display: flex;
-        justify-content: space-between;
-        list-style: none;
-    }
-
-    .navbar__item {
-        font-size: calc(var(--index));
-        font-family: raleway-c;
-        font-weight: 400;
-        word-wrap: break-word
-    }
-
+.mobile__bottom_navbar{
+    display: none;
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
     .navbar {
         position: fixed;
         background-color: var(--background-color);
+        padding: 0;
         z-index: 1000;
     }
 
@@ -426,172 +298,80 @@ footer {
         word-wrap: break-word
     }
 
-    .hero {}
-
     .lang {
         display: none;
     }
 
+
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    h2{
+        font-size: 1.5rem;
+    }
+    h3{
+        font-size: 1rem;
+    }
+
     .burger__menu {
+        border-radius: 8px;
+        background-color: #F6F5F5;
+        padding: 0.625rem;
         display: block;
     }
 
-    .hero .container {
-        flex-direction: column;
-        padding: 22vw 2vh;
-        margin-left: 0;
+    .hero{
+        padding: 6rem 2rem;
     }
-
-    .hero__image {
-        position: static;
-
+    .detailes__wrapper p {
+        width: 100%;
     }
-
-    h1 {
-        width: calc(var(--index)*25);
-        color: var(--text-color1);
-        font-size: calc(var(--index)*2);
-        font-weight: bold;
-        word-wrap: break-word;
+    .image{
+        height: 15rem;
+        background-position: center;
     }
-
-    
-    .main__btn {
-        width: calc(var(--index)*10);
-        height: calc(var(--index)*4);
-        
-        font-size: calc(var(--index)*1);
-     
+    .news{
+        padding: 7rem 2rem;
     }
-    
-    .main__btn:first-child {
-        background-color: var(--button-color);
-        color: var(--background-color);
+    .news__container{
+        column-gap: 2rem;
     }
-    .what_is_that{
-        flex-direction: column-reverse;
-        row-gap: 2em;
+    iframe{
+        padding-bottom: 1rem;
     }
-    .what_is_that__image{
-        width: calc(var(--index)*35);
-    }
-    .what_is_that__textblock{
-        width: calc(var(--index)*35);
+    footer{
+        padding: 0;
+        padding-left: 1rem;
     }
     .footer__info{
         flex-direction: column;
-        row-gap: 2em;
+        row-gap: 2rem;
     }
-    .advantages__pages{
-        display: none;
-    }
-    .advantages__pages__mobile{
-        display: block;
-    }
-    .advantage__list{
-        flex-direction: row;
-        column-gap: 1em;
-    }
-    .advantage__card{
-        width: calc(var(--index)*40);
-        flex-direction: column-reverse;
-        row-gap: 2em;
-    }
-    .advantage__text{
+    .mobile__bottom_navbar{
         width: 100%;
-
-    }
-    .advantage__text .head{
-        width: calc(var(--index)*17);
-        font-size: calc(var(--index)*1.5);
-    }
-    .advantage__text .title{
-        font-size: calc(var(--index)*1.4);
-    }
-    .advantage__text .subtitle{
-        width: 100%;
-        font-size: calc(var(--index)*1.4);
-    }
-    .htw__content {
-        flex-direction: column-reverse;
-        row-gap: 2em;
-        padding: 0;
-    }
-
-    .htw__text{
-        width: 90%;
-    }
-    .htw__progress_bar{
-        display: none;
-    }
-    .htw__image{
-        width: calc(var(--index)*30);
-        height: calc(var(--index)*30);
-    }
-    .news{
-        padding: 5vh 10vw;
-    }
-    .news__title{
-        font-size: calc(var(--index)*2);
-        margin-bottom: 1em;
-    }
-    .news__link{
-        display: none;
-    }
-    .news__link__mobile{
-        display: block;
-    }
-    .news__container{
-        column-gap: 2em;
-    }
-    
-    .new__image{
-        width: calc(var(--index)*25);
-        height: calc(var(--index)*20);
-    }
-    .new__subscription {
-        width: calc(var(--index)*25);
+        height: 4rem;
+        background-color: var(--background-color);
         display: flex;
+        justify-content: space-between;
+        padding: 0 2rem;
+        z-index: 10000;
+        position: fixed;
+        bottom: 0;
+        border-top: 1px solid #858585;
     }
-    .new__titles{
-        width: 100%;
-        flex-basis: 100%;
-    }
-    .new__title{
-        font-size: calc(var(--index)*1.7);
-    }
-    .new__subtitle{
-        width: 100%;
-        font-size: calc(var(--index)*1.2);
-    }
-
-    .questions{
-        padding: 10vh 5vw;
-    }
-    .questions__title{
-        font-size: calc(var(--index)*2);
-    }
-
-    .question{
-        height: 3rem;
-    }
-    .question__active{
-        height: calc(var(--index)*15);
-    }
-    .question__p{
-        font-size: calc(var(--index)*1.5);
-    }
-    .question__text{
-        font-size: calc(var(--index)*1.3);
-        line-height: 26px;
-    }
-    .application_form{
-        width: 100%;
-    }
-    #name{
-        width: 100%;
-    }
-    .interested__in{
+    .mobile__bottom__button{
+        display: flex;
+        align-items: center;
+        justify-content: center;
         flex-direction: column;
+        row-gap: 0.5rem;
+        border: none;
+        background-color: var(--background-color);
+    }
+    .mobile__calculate_button{
+        position: absolute;
+        left: 40%;
+        bottom: 20%;
     }
 }
