--- a/css/main.css
+++ b/css/main.css
@@ -849,7 +849,7 @@ footer {
 
 @media (max-width:1024px) {
     .logo {
-        flex-basis: 0%;
+        flex-basis: 0;
     }
 
     .navbar__list {
@@ -871,6 +871,9 @@ footer {
 }
 
 @media (max-width:768px) {
+    .wrapper, .content, .what_is_that__textblock, .advantage__card, .main__header, .hero__image > *{
+        will-change: unset;
+    }
     .content{
         position: relative;
     }
@@ -881,7 +884,7 @@ footer {
     }
 
     .logo {
-        flex-basis: 0%;
+        flex-basis: 0;
     }
 
     .navbar__list {
@@ -1146,8 +1149,39 @@ footer {
         font-size: calc(var(--index)*2.5);
     }
 
-    .mobile__nav{
-        display: block;
+    .mobile__bottom_navbar{
+        width: 100%;
+        height: 4rem;
+        background-color: var(--background-color);
+        display: flex;
+        justify-content: space-between;
+        padding: 0 2rem;
+        z-index: 10000;
         position: fixed;
+        bottom: 0;
+        border-top: 1px solid #858585;
+    }
+    .mobile__bottom__button{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        row-gap: 0.5rem;
+        border: none;
+        background-color: var(--background-color);
+    }
+    .mobile__bottom__button p{
+        font-family: raleway-c;
+    }
+    .mobile__bottom__button .active{
+        color:#118DF0;
+    }
+    .mobile__calculate_button{
+        position: absolute;
+        left: 40%;
+        bottom: 20%;
+        border: 0;
+        background-color: rgba(0, 0, 0, 0);
+
     }
 }
