--- a/pages/borehole/borehole.css
+++ b/pages/borehole/borehole.css
@@ -509,8 +509,12 @@ footer {
 }
 
 @media (max-width: 768px) {
+    .wrapper, .content, .what_is_that__textblock, .advantage__card, .main__header, .hero__image > *{
+        will-change: unset;
+    }
     .navbar {
         position: fixed;
+        top: 0;
         background-color: var(--background-color);
         z-index: 1000;
         padding: 0;
@@ -683,9 +687,17 @@ footer {
         border: none;
         background-color: var(--background-color);
     }
+    .mobile__bottom__button p{
+        font-family: raleway-c;
+    }
+    .mobile__bottom__button .active{
+        color:#118DF0;
+    }
     .mobile__calculate_button{
         position: absolute;
         left: 40%;
-        bottom: 20%;
+        bottom: 26%;
+        border: 0;
+        background-color: rgba(0, 0, 0, 0);
     }
 }
