--- a/pages/detailes/detailes.css
+++ b/pages/detailes/detailes.css
@@ -116,7 +116,7 @@ a {
 }
 
 .image {
-    background-image: url(../../img/detailes.png);
+    background-image: url(../../img/main/detailes.png);
     width: 100%;
     height: 30rem;
     background-size: cover;
@@ -152,7 +152,7 @@ a {
 .new__image {
     width: 20rem;
     height: 13rem;
-    background-image: url(../../img/new1.png);
+    background-image: url(../../img/main/image-news-1.png);
     border-radius: 24px;
 }
 
