--- a/css/design.css
+++ b/css/design.css
@@ -510,6 +510,16 @@
     bottom: 0;
     z-index: 10;
 }
+.map-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    z-index: 1;
+    cursor: pointer;
+}
 
 
 /* Footer */
