--- a/css/global.css
+++ b/css/global.css
@@ -213,6 +213,15 @@ p {
   padding-left: 1rem;
 }
 
+label.error{
+    color:red;
+}
+input.error{
+    border-color: red;
+}
+input.error::placeholder{
+    color: red;
+}
 @media screen and (max-width: 767px) {
   .title-page {
     font-size: 60px;
